# rust-mosquitto-rabbitmq-mongodb

./: README.md
consumer/: Cargo.toml
consumer/src/: main.rs
consumer/src/db/: mod.rs  sensor.rs
consumer/src/models/: message.rs  mod.rs  payload_trait.rs  sensor.rs
producer/: Cargo.toml
producer/src/: amqp.rs  main.rs
producer/src/models/: message.rs  mod.rs  notification.rs  payload_trait.rs
register/src/: main.rs
register/src/db/: sensor.rs
register/src/models/: sensor.rs
register/src/routes/: api.rs
