[package]
name = "rust-consumer"
version = "1.0.0"
edition = "2021"

[dependencies]
lapin = "2.1.1"
log = "0.4.17"
futures-lite = "^1.7"
async-global-executor = "^2.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"

[dependencies.tracing]
version = "^0.1"
default-features = false

[dev-dependencies.tracing-subscriber]
version = "^0.3"
features = ["fmt"]